RESOLVED FIXED 250976
XMLTreeViewer::transformDocumentToTreeView should not call didChangeActiveStyleSheetCandidates
https://bugs.webkit.org/show_bug.cgi?id=250976
Summary XMLTreeViewer::transformDocumentToTreeView should not call didChangeActiveSty...
Ahmad Saleem
Reported 2023-01-22 06:13:00 PST
Hi Team, While going through Blink's commit, I came across another potential optimization: Blink Commit - https://chromium.googlesource.com/chromium/blink/+/7654964eebca76141b8c44ef2f369d547963f577 WebKit Source - https://searchfox.org/wubkat/source/Source/WebCore/xml/XMLTreeViewer.cpp#64 If we can remove it then good else we can close this as well. Thanks!
Attachments
Radar WebKit Bug Importer
Comment 1 2023-01-29 06:13:18 PST
EWS
Comment 2 2024-01-29 14:34:05 PST
Committed 273689@main (ba575dadde29): <https://commits.webkit.org/273689@main> Reviewed commits have been landed. Closing PR #23358 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.