XMLTreeViewer::transformDocumentToTreeView should not call didChangeActiveStyleSheetCandidates

https://bugs.webkit.org/show_bug.cgi?id=250976
rdar://problem/104797532

Reviewed by Ryosuke Niwa.

Merge: https://chromium.googlesource.com/chromium/blink/+/7654964eebca76141b8c44ef2f369d547963f577

transformDocumentToTreeView was calling didChangeActiveStyleSheetCandidates
after updating the text inside a `style` element. This isn't necessary since we already
updated the stylesheets.

* Source/WebCore/xml/XMLTreeViewer.cpp:
(XMLTreeViewer::transformDocumentToTreeView):

Canonical link: https://commits.webkit.org/273689@main